BXC-4710 trying to update tests